# OpponentPredictionWithKMDKL

./: README.md
hmcl_msgs/: CMakeLists.txt  package.xml
racepkg/: CMakeLists.txt  package.xml  setup.py
racepkg/cfg/: racepkgDyn.cfg
racepkg/include/racepkg/: h2h_configs.py  path_generator.py  utils.py
racepkg/include/racepkg/common/: pytypes.py
racepkg/include/racepkg/common/tracks/: radius_arclength_track.py  track.py  track_lib.py
racepkg/include/racepkg/common/utils/: file_utils.py  scenario_utils.py
racepkg/include/racepkg/controllers/: MPCC_H2H_approx.py  NL_MPC.py  PID.py  abstract_controller.py
racepkg/include/racepkg/controllers/utils/: controllerTypes.py
racepkg/include/racepkg/dynamics/models/: abstract_model.py  dynamics_models.py  model_types.py  obstacle_types.py
racepkg/include/racepkg/prediction/: abstract_gp_controller.py  gp_controllers.py  torch_utils.py  trajectory_predictor.py
racepkg/include/racepkg/prediction/covGP/: covGPNN_Train.py  covGPNN_dataGen.py  covGPNN_gp_nn_model.py  covGPNN_model.py  covGPNN_predictor.py  train_main.py
racepkg/include/racepkg/prediction/multipathPP/: config_multipathpp_model.yaml  modules.py  multipathPP_Train.py  multipathPP_dataGen.py  multipathPP_model.py  multipathPP_nn_model.py  multipathPP_predictor.py
racepkg/include/racepkg/simulation/: dynamics_simulator.py
racepkg/launch/: ego_controller.launch  ego_predictor.launch  recorder.launch  target_controller.launch  track_pub.launch
racepkg/src/: README.md  ego_ctrl_node.py  pred_only.py  record_node.py  target_ctrl_node.py  track_pub.py
(+3 files in other folders)
